--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -2275,3 +2275,21 @@
   timeWait: 0 mins
   timeBuild: 3 mins
   timeTotal: 3 mins
+- name: devspaces-devfileregistry-rhel8
+  tag: 3.10-56
+  taskId: 55880565
+  timeCreate: Sun Oct 1 22:26:06 2023
+  timeStart: Sun Oct 1 22:26:35 2023
+  timeFinish: Sun Oct 1 22:34:20 2023
+  timeWait: 0 mins
+  timeBuild: 7 mins
+  timeTotal: 8 mins
+- name: devspaces-operator-bundle
+  tag: 3.10-100
+  taskId: 55880616
+  timeCreate: Sun Oct 1 22:42:24 2023
+  timeStart: Sun Oct 1 22:42:32 2023
+  timeFinish: Sun Oct 1 22:45:25 2023
+  timeWait: 0 mins
+  timeBuild: 2 mins
+  timeTotal: 3 mins
