chore: Update dependencies/LATEST_IMAGES, COMMITS, DIGESTS, INDEXES, BUILD_TIMES
Signed-off-by: devstudio-release <nickboldt+devstudio-release@gmail.com>

--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -520,3 +520,39 @@
   timeWait: 0 mins
   timeBuild: 3 mins
   timeTotal: 3 mins
+- name: devspaces-udi-rhel8
+  tag: 3.9-14.1695922053
+  taskId: 55834225
+  timeCreate: Thu Sep 28 13:27:33 2023
+  timeStart: Thu Sep 28 13:28:17 2023
+  timeFinish: Thu Sep 28 14:13:05 2023
+  timeWait: 0 mins
+  timeBuild: 44 mins
+  timeTotal: 45 mins
+- name: devspaces-udi-rhel8
+  tag: 3.9-14.1695925088
+  taskId: 55834918
+  timeCreate: Thu Sep 28 14:18:08 2023
+  timeStart: Thu Sep 28 14:20:05 2023
+  timeFinish: Thu Sep 28 15:08:43 2023
+  timeWait: 1 mins
+  timeBuild: 48 mins
+  timeTotal: 50 mins
+- name: devspaces-udi-rhel8
+  tag: 3.9-14.1695925134
+  taskId: 55834937
+  timeCreate: Thu Sep 28 14:18:55 2023
+  timeStart: Thu Sep 28 14:20:52 2023
+  timeFinish: Thu Sep 28 15:08:16 2023
+  timeWait: 1 mins
+  timeBuild: 47 mins
+  timeTotal: 49 mins
+- name: devspaces-udi-rhel8
+  tag: 3.9-14.1695925191
+  taskId: 55834963
+  timeCreate: Thu Sep 28 14:19:51 2023
+  timeStart: Thu Sep 28 14:21:39 2023
+  timeFinish: Thu Sep 28 15:10:18 2023
+  timeWait: 1 mins
+  timeBuild: 48 mins
+  timeTotal: 50 mins
