--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -2446,3 +2446,21 @@
   timeWait: 20 mins
   timeBuild: 4 mins
   timeTotal: 24 mins
+- name: devspaces-code-rhel8
+  tag: 3.10-79
+  taskId: 55998516
+  timeCreate: Thu Oct 5 15:11:05 2023
+  timeStart: Thu Oct 5 17:17:05 2023
+  timeFinish: Thu Oct 5 17:25:04 2023
+  timeWait: 126 mins
+  timeBuild: 7 mins
+  timeTotal: 133 mins
+- name: devspaces-operator-bundle
+  tag: 3.10-109
+  taskId: 56003885
+  timeCreate: Thu Oct 5 17:34:06 2023
+  timeStart: Thu Oct 5 18:49:02 2023
+  timeFinish: Thu Oct 5 18:52:44 2023
+  timeWait: 74 mins
+  timeBuild: 3 mins
+  timeTotal: 78 mins
