chore: Update dependencies/LATEST_IMAGES, COMMITS, DIGESTS, INDEXES, BUILD_TIMES
Signed-off-by: devstudio-release <nickboldt+devstudio-release@gmail.com>

--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -583,3 +583,12 @@
   timeWait: 12 mins
   timeBuild: 4 mins
   timeTotal: 16 mins
+- name: devspaces-operator-bundle
+  tag: 3.9-298
+  taskId: 56042227
+  timeCreate: Sat Oct 7 16:52:00 2023
+  timeStart: Sat Oct 7 16:52:34 2023
+  timeFinish: Sat Oct 7 16:55:38 2023
+  timeWait: 0 mins
+  timeBuild: 3 mins
+  timeTotal: 3 mins
