--- a/dependencies/che-devfile-registry/deploy/openshift/devspaces-devfile-registry.yaml
+++ b/dependencies/che-devfile-registry/deploy/openshift/devspaces-devfile-registry.yaml
@@ -7,7 +7,7 @@
 # SPDX-License-Identifier: EPL-2.0
 #
 ---
-apiVersion: v1
+apiVersion: template.openshift.io/v1
 kind: Template
 metadata:
   name: devspaces-devfile-registry
