chore: Update dependencies/LATEST_IMAGES, COMMITS, DIGESTS, INDEXES, BUILD_TIMES
Signed-off-by: devstudio-release <nickboldt+devstudio-release@gmail.com>

--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -592,3 +592,12 @@
   timeWait: 0 mins
   timeBuild: 3 mins
   timeTotal: 3 mins
+- name: devspaces-operator-bundle
+  tag: 3.9-299
+  taskId: 56131114
+  timeCreate: Wed Oct 11 11:58:23 2023
+  timeStart: Wed Oct 11 12:42:48 2023
+  timeFinish: Wed Oct 11 12:47:12 2023
+  timeWait: 44 mins
+  timeBuild: 4 mins
+  timeTotal: 48 mins
