--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -2671,3 +2671,21 @@
   timeWait: 51 mins
   timeBuild: 4 mins
   timeTotal: 55 mins
+- name: devspaces-server-rhel8
+  tag: 3.10-16
+  taskId: 56146111
+  timeCreate: Thu Oct 12 07:48:41 2023
+  timeStart: Thu Oct 12 07:49:22 2023
+  timeFinish: Thu Oct 12 07:57:27 2023
+  timeWait: 0 mins
+  timeBuild: 8 mins
+  timeTotal: 8 mins
+- name: devspaces-operator-bundle
+  tag: 3.10-121
+  taskId: 56146403
+  timeCreate: Thu Oct 12 08:06:38 2023
+  timeStart: Thu Oct 12 08:06:56 2023
+  timeFinish: Thu Oct 12 08:10:38 2023
+  timeWait: 0 mins
+  timeBuild: 3 mins
+  timeTotal: 4 mins
