--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -2707,3 +2707,21 @@
   timeWait: 0 mins
   timeBuild: 4 mins
   timeTotal: 4 mins
+- name: devspaces-devfileregistry-rhel8
+  tag: 3.10-66
+  taskId: 56155268
+  timeCreate: Thu Oct 12 16:41:33 2023
+  timeStart: Thu Oct 12 16:41:42 2023
+  timeFinish: Thu Oct 12 16:49:59 2023
+  timeWait: 0 mins
+  timeBuild: 8 mins
+  timeTotal: 8 mins
+- name: devspaces-operator-bundle
+  tag: 3.10-123
+  taskId: 56156011
+  timeCreate: Thu Oct 12 17:04:51 2023
+  timeStart: Thu Oct 12 17:05:25 2023
+  timeFinish: Thu Oct 12 17:08:55 2023
+  timeWait: 0 mins
+  timeBuild: 3 mins
+  timeTotal: 4 mins
