--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -2761,3 +2761,21 @@
   timeWait: 0 mins
   timeBuild: 3 mins
   timeTotal: 3 mins
+- name: devspaces-devfileregistry-rhel8
+  tag: 3.10-67
+  taskId: 56191967
+  timeCreate: Fri Oct 13 18:27:12 2023
+  timeStart: Fri Oct 13 18:27:16 2023
+  timeFinish: Fri Oct 13 18:36:01 2023
+  timeWait: 0 mins
+  timeBuild: 8 mins
+  timeTotal: 8 mins
+- name: devspaces-operator-bundle
+  tag: 3.10-126
+  taskId: 56192377
+  timeCreate: Fri Oct 13 18:44:40 2023
+  timeStart: Fri Oct 13 18:45:12 2023
+  timeFinish: Fri Oct 13 18:48:44 2023
+  timeWait: 0 mins
+  timeBuild: 3 mins
+  timeTotal: 4 mins
